--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,9 @@ crash.log
 crash.*.log
 *.lock
 
+# Keys
+*.pem
+
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
 # password, private keys, and other secrets. These should not be part of version
 # control as they are data points which are potentially sensitive and subject
