--- a/ansible/aws_ec2.yaml
+++ b/ansible/aws_ec2.yaml
@@ -2,3 +2,10 @@ plugin: aws_ec2
 aws_profile: default
 regions:
   - us-east-1
+
+hostnames:
+  - ip-address
+
+key_groups:
+  - prefix: az
+    key: placement.availability_zone
