--- a/ansible/group_vars/debian.yaml
+++ b/ansible/group_vars/debian.yaml
@@ -1,3 +1,3 @@
 ansible_ssh_private_key_file: ../iac-alura.pem
-ansible_ssh_user: ubuntu
+ansible_ssh_user: admin
 ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
