adding update cache

--- a/ansible/playbook-all-django-setup.yaml
+++ b/ansible/playbook-all-django-setup.yaml
@@ -3,6 +3,10 @@
     gather_facts: True
 
     tasks:
+      - name: "Atualizando o apt-cache"
+        apt:  update_cache=yes cache_valid_time=3600
+        become: yes
+        
       - name:
         apt: name={{ item }} state=present
         become: yes
