--- a/ansible/playbook-all-django-setup.yaml
+++ b/ansible/playbook-all-django-setup.yaml
@@ -3,11 +3,11 @@
     gather_facts: True
 
     tasks:
-      - name: "Atualizando o apt-cache"
+      - name: Atualizando o apt-cache
         apt:  update_cache=yes cache_valid_time=3600
         become: yes
-        
-      - name:
+
+      - name: Instalando o Python3
         apt: name={{ item }} state=present
         become: yes
         loop:
