adding task to setup venv

--- a/ansible/playbook-all-django-setup.yaml
+++ b/ansible/playbook-all-django-setup.yaml
@@ -13,3 +13,7 @@
         loop:
           - python3
           - virtualenv
+      
+      - name: Criando a venv
+        pip:
+          virtualenv: /home/ubuntu/tcc/venv
