adding package names

--- a/ansible/playbook-all-django-setup.yaml
+++ b/ansible/playbook-all-django-setup.yaml
@@ -17,3 +17,6 @@
       - name: Criando a venv
         pip:
           virtualenv: /home/ubuntu/tcc/venv
+          name:
+            - django
+            - djangorestframework
