fixing some errors

--- a/ansible/playbook-all-django-setup.yaml
+++ b/ansible/playbook-all-django-setup.yaml
@@ -22,5 +22,4 @@
             - djangorestframework
 
       - name: Iniciando o projeto
-        shell: 'source /home/ubuntu/tcc/venv/bin/activate; 
-                django-admin startproject setup /home/ubuntu/tcc/.'
+        shell: '. /home/ubuntu/tcc/venv/bin/activate; django-admin startproject setup /home/ubuntu/tcc/'
