--- a/ansible/playbook-all-django-setup.yaml
+++ b/ansible/playbook-all-django-setup.yaml
@@ -23,3 +23,9 @@
 
       - name: Iniciando o projeto
         shell: '. /home/ubuntu/tcc/venv/bin/activate; django-admin startproject setup /home/ubuntu/tcc/'
+      
+      - name: Alterando o hosts settings
+        lineinfile:
+          path: /home/ubuntu/tcc/setup/settings.py
+          regexp: 'ALLOWED_HOSTS'
+          line: "ALLOWED_HOSTS = ['*']"
