--- a/ansible/playbook-all-django-setup.yaml
+++ b/ansible/playbook-all-django-setup.yaml
@@ -29,3 +29,6 @@
           path: /home/ubuntu/tcc/setup/settings.py
           regexp: 'ALLOWED_HOSTS'
           line: "ALLOWED_HOSTS = ['*']"
+          backrefs: yes
+        tags:
+          - hosts
