--- a/ansible/playbook-all-django-setup.yaml
+++ b/ansible/playbook-all-django-setup.yaml
@@ -33,7 +33,7 @@
         tags:
           - hosts
       
-      - name: Subindo o ambiente
-        shell: '. /home/ubuntu/tcc/venv/bin/activate; python /home/ubuntu/tcc/manage.py runserver 0.0.0.0:8000 &'
+      - name: Subindo o ambiente para teste (Ctrl + C para sair)
+        shell: '. /home/ubuntu/tcc/venv/bin/activate; python /home/ubuntu/tcc/manage.py runserver 0.0.0.0:8000'
         tags:
           - runserver
