--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,9 @@ crash.*.log
 *.lock.hcl
 
 # Keys
+*-keys
+*-key
+*-key.pub
 *.pem
 
 # Exclude all .tfvars files, which are likely to contain sensitive data, such as
