--- a/terraform/infra/group_vars/ubuntu.yaml
+++ b/terraform/infra/group_vars/ubuntu.yaml
@@ -1,3 +1,3 @@
-ansible_ssh_private_key_file: ../iac-alura.pem
+ansible_ssh_private_key_file: /home/iac-user/repo/iac-aws-alura/terraform/env/dev/dev-key
 ansible_ssh_user: ubuntu
 ansible_ssh_common_args: '-o StrictHostKeyChecking=no'
