--- a/terraform/env/dev/playbook-all-django-setup.yaml
+++ b/terraform/env/dev/playbook-all-django-setup.yaml
@@ -21,9 +21,15 @@
             - django
             - djangorestframework
 
+      - name: Verificando se o projeto ja existe
+        stat:
+          path: /home/ubuntu/tcc/setup/settings.py
+        register: projeto
+
       - name: Iniciando o projeto
         shell: '. /home/ubuntu/tcc/venv/bin/activate; django-admin startproject setup /home/ubuntu/tcc/'
-      
+        when: not projeto.stat.exists
+
       - name: Alterando o hosts settings
         lineinfile:
           path: /home/ubuntu/tcc/setup/settings.py
