--- a/c-django/ansible/ansible.cfg
+++ b/c-django/ansible/ansible.cfg
@@ -139,6 +139,7 @@ interpreter_python = /usr/bin/python3
 # If set, configures the path to the Vault password file as an alternative to
 # specifying --vault-password-file on the command line.
 #vault_password_file = /path/to/vault_password_file
+ask_vault_pass = True
 
 # format of string {{ ansible_managed }} available within Jinja2
 # templates indicates to users editing templates files will be replaced.
